# LoCo

./: CMakeLists.txt  CMakePresets.json  DESCRIPTION  Makefile  NAMESPACE  README.md  bootstrap.ps1  bootstrap.sh  vcpkg.json
.github/workflows/: build-release.yml  tests_cpp.yml
R/: loco.R
src/: GraphData.cpp  GraphData.hpp  GraphHandler.cpp  GraphHandler.hpp  LoCo.cpp  Makevars  Neighborhood.cpp  Neighborhood.hpp  Node.hpp  SCParser.cpp  SCParser.hpp  correlationUtils.hpp  generalUtils.hpp  kdTreeUtils.hpp  loco_R.cpp  loco_R.h  threadPool.hpp
src/core/: GraphData.cpp  Neighborhood.cpp
src/include/: GraphData.hpp  Neighborhood.hpp  correlationUtils.hpp  generalUtils.hpp  kdTreeUtils.hpp
src/lib/Parser/: SCParser.cpp  SCParser.hpp
src/lib/SCGraph/Constructors/: GraphData.cpp  GraphData.hpp  GraphHandler.cpp  GraphHandler.hpp  Neighborhood.cpp  Neighborhood.hpp  Node.hpp
src/lib/Utils/: correlationUtils.hpp  kdTreeUtils.hpp  threadPool.hpp
test/: data_1.tsv  data_2.tsv  paperCellsignalMarkers.txt  paperCellstateMarkers.txt  simulatedData1.tsv  simulatedData2.tsv  simulatedData3.tsv  test_b.sh  test_c.sh  test_sigmoidal.sh
tools/: LoCo.cpp
